# eth-poe_dfu_bootloader_module

./: CORE_MODULE.json  README.md
include/: board.h  chconf.h  halconf.h  mcuconf.h
target_template/: CMakeLists.txt  MODULE_TARGET.json
