# TARGET MODULE eth-poe_dfu_bootloader

PROJECT( eth-poe_dfu_bootloader )
CMAKE_MINIMUM_REQUIRED( VERSION 2.8 )

FIND_PACKAGE( CORE_BUILD CONFIG REQUIRED )

INCLUDE ( CoreBasicTarget NO_POLICY_SCOPE )

SET( BOOTLOADER_SIZE 16384 )
SET( CONFIGURATION_SIZE 16384 )
SET( TAGS_SIZE 256 )

SET( USE_SPECS "nano.specs")

SET( PROJECT_INCLUDE_DIRECTORIES
)

SET( PROJECT_SOURCES
  main.cpp
)

nil_target_module(
  IS_BOOTLOADER
  MODULE eth-poe_dfu_bootloader
  OS_VERSION CHIBIOS_16
)
